[gd_scene load_steps=5 format=2]

[ext_resource path="res://mods/Moose1002.CozyCassettes/Scenes/prop_tape_boombox.gd" type="Script" id=1]
[ext_resource path="res://mods/Moose1002.CozyCassettes/Scenes/prop_tape_boombox_int.gd" type="Script" id=2]
[ext_resource path="res://Assets/Models/boombox.obj" type="ArrayMesh" id=3]

[sub_resource type="BoxShape" id=2]

[node name="tape_boombox" type="KinematicBody"]
script = ExtResource( 1 )
delete_on_owner_disconnect = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.193313, 0, 0, 0, 0.193313, 0, 0, 0, 0.193313, 0, 0.193456, 0 )
mesh = ExtResource( 3 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = -3.0
unit_size = 8.0
max_distance = 40.0

[node name="Interactable" type="Area" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Interactable"]
transform = Transform( 0.564184, 0, 0, 0, 0.430603, 0, 0, 0, 0.398955, 0, 0.319206, 0 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer3DSFX" type="AudioStreamPlayer3D" parent="."]
unit_db = 1.0
unit_size = 5.0
max_db = -15.0
max_distance = 35.0

[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_track_finish"]
[connection signal="_activated" from="Interactable" to="." method="_on_Interactable__activated"]
[connection signal="finished" from="AudioStreamPlayer3DSFX" to="." method="_on_sfx_finish"]
